PhaseIV/todo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-apps
  labels:
    app.kubernetes.io/name: todo-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: todo-app.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: todo-apps-backend
                port:
                  number: 8000
          - path: /docs(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: todo-apps-backend
                port:
                  number: 8000
          - path: /openapi.json(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: todo-apps-backend
                port:
                  number: 8000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: todo-apps-frontend
                port:
                  number: 3000
